<resources>
    <string name="app_name">MedScheduler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Schedule your treatment shots</string>

    <string name="menu_treatment">Treatment</string>
    <string name="menu_home">Home</string>
    <string name="select_an_option">Select an Option</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="save_treatment">Save Treatment</string>
    <string name="add_treatment">Add Treatment</string>
    <string name="save">Save</string>
    <string name="name">Name:</string>
    <string name="name_single">Name</string>
    <string name="duration">Duration</string>
    <string name="duration_days">Duration (days):</string>
    <string name="there_no_treatments">There’re no treatments created yet!</string>
    <string name="there_no_medicaments">There’re no medicaments created yet!</string>
    <string name="duration_days_s">Duration (days)</string>
    <string name="add_medicament">Add Medicament</string>
    <string name="save_medicament">Save Medicament</string>
    <string name="menu_medicament">Medicament</string>
    <string name="add_dosis">Add Dosis</string>
    <string name="doisi">Dosis</string>
    <string name="period_h">Period (h)</string>
    <string name="pills">Pills</string>
    <string name="there_no_dosis">There’re no dosis created yet!</string>
    <string name="detail">Detail</string>
    <string name="treatment_detail">Treatment Detail</string>
    <string name="menu_instance">Instance</string>
    <string name="stop">Stop</string>
    <string name="there_no_instances">There’re no instances created yet!</string>
    <string name="there_no_schedules">There’re no schedules created yet!</string>
    <string name="start_instance">Start Instance</string>
    <string name="treatment_name">Treatment</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start">Start</string>
    <string name="treatment_name_s">Treatment:</string>
    <string name="start_date_s">Start Date:</string>
    <string name="end_date_s">End Date:</string>
    <string name="medicament_n">Medicament:</string>
    <string name="period_h_c">Period (h):</string>
    <string name="pill_number">Pills</string>
    <string name="delay_number">Delay:</string>
    <string name="all_the_fields_required">Fill all the fields, they are required!</string>
    <string name="save_dosis">Add Dosis</string>
    <string name="invalid_period">Invalid period, it must be between 1 and 24!</string>
    <string name="invalid_pills">Invalid pills, it must be between 1 and 5!</string>
    <string name="invalid_delay">Invalid delay, it must be between 1 and 30!</string>
    <string name="medicament_dosis_exist">An associated medicament already exists!</string>
    <string name="dosis_must_be_created">To start an instance we need to create dosis in first place!</string>
    <string name="treatment_instance_exist">An associated treatment instance already exists!</string>
    <string name="take_medicament">Hello, it\'s time to take the %1$s, (%2$s)!</string>
    <string name="instant_date">Date</string>
    <string name="dosis_must_be_created_share">To share a treatment we need to create dosis in first place!</string>
    <string name="treatment_imported_success">Treatment was imported successfully!</string>
    <string name="default_num_delay">10</string>
    <string name="default_num_period">4</string>
    <string name="default_num_pills">1</string>
    <string name="date_format_hint">dd/MM/yyyy hh:mm</string>
</resources>
