<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InstanceFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/instance_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/treatment_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_date"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_date"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/lblEmptyInstanceSet"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/there_no_instances"
            android:visibility="gone"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instance_header"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/instance_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/btnStartInstance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEmptyInstanceSet">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/btnStartInstance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00897B"
            android:text="@string/start_instance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instance_recycler" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>