<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SaveTreatmentFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnAddDosis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00897B"
            android:text="@string/add_dosis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lblDetailTreatmentNameTag"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:gravity="right"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/lblDetailTreatmentName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblDetailTreatmentName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            app:layout_constraintBaseline_toBaselineOf="@+id/lblDetailTreatmentNameTag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblDetailTreatmentNameTag" />

        <TextView
            android:id="@+id/lblDetailTreatmentDurationTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/duration_days"
            android:textSize="18sp"
            android:gravity="right"
            app:layout_constraintBaseline_toBaselineOf="@+id/lblDetailTreatmentDuration"
            app:layout_constraintEnd_toEndOf="@+id/lblDetailTreatmentNameTag"
            app:layout_constraintStart_toStartOf="@+id/lblDetailTreatmentNameTag" />

        <TextView
            android:id="@+id/lblDetailTreatmentDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="@+id/lblDetailTreatmentName"
            app:layout_constraintStart_toStartOf="@+id/lblDetailTreatmentName"
            app:layout_constraintTop_toBottomOf="@+id/lblDetailTreatmentName" />

        <TextView
            android:id="@+id/lblDetailDosis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/doisi"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblDetailTreatmentDurationTag" />

        <LinearLayout
            android:id="@+id/dosis_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblDetailDosis" >

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/menu_medicament"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/period_h"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pills"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/lblEmptyDosisSet"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/there_no_dosis"
            android:visibility="gone"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dosis_header"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dosis_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/btnAddDosis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEmptyDosisSet">

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>